<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/images">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      
        
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:text="@string/view_header"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>
		 <LinearLayout
           	android:layout_width="wrap_content"
    		android:layout_height="250dp"
   			android:orientation="vertical" >

            <ImageView
             android:id="@+id/ivPhotoView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_launcher" />
        </LinearLayout>
         

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/name"
                    android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical"/>

                 <TextView
                    android:id="@+id/view_textName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/name"
                    android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/addrss_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                   android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/address"
                  android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical"/>

                 <TextView
                    android:id="@+id/view_addrss_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/address"
                  android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/latitude_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/latitude"
                    android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/view_latitude_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                   android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/address"
                  android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/longitude_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                      android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/longitude"
                   android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />

              <TextView
                    android:id="@+id/view_longitude_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                      android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/longitude"
                   android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/menus_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                     android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/menus"
                  android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/view_menus_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                     android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/longitude"
                   android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/special_menu_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                      android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/special_menu"
                   android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/viewspecial_menu_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                      android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/longitude"
                   android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/close_day_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                     android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/close_day"
                  android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/view_close_day_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                     android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/longitude"
                   android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/daily_open_time_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                     android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/daily_open_time"
                    android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/view_daily_open_time_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                      android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/longitude"
                   android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/description_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                     android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/description"
                    android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/view_description_textview"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                      android:layout_weight="4"
                    android:paddingLeft="15dp"
                    android:text="@string/longitude"
                   android:textColor="#3F3F3F"
                    android:textSize="17sp" 
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_custom"
            android:onClick="viewMap"
            android:text="@string/Show_map"
            android:textColor="#ffffff" 
            />
    </LinearLayout>

</ScrollView>